# PhD-Project

./: .gitignore  FHD_PUMP.md
Decoupled/: CLAUDE.md  CMakeLists.txt  COUPLING_PLAN.md  HEDGEHOG_TEST_CHANGES.md  HPC_TESTS.md  SESSION_SUMMARY.md  launch_hedgehog_tests.sh  plot_cfl.py  run_validation.sh  session_handoff.md
Decoupled/Report/: AUDIT_REPORT.md  COUPLING_PLAN.md  PROJECT_JOURNAL.md  SESSION_SUMMARY.md  TECHNICAL_NOTES.md  extension.md  generate_parametric_study_pdf.py  plot_mms_convergence.py  session_handoff.md
Decoupled/cahn_hilliard/: CMakeLists.txt  cahn_hilliard.cc  cahn_hilliard.h  cahn_hilliard_assemble.cc  cahn_hilliard_main.cc  cahn_hilliard_output.cc  cahn_hilliard_setup.cc  cahn_hilliard_solve.cc
Decoupled/diagnostics/: force_diagnostics.h  interface_tracking.h
Decoupled/drivers/: CMakeLists.txt  decoupled_driver.cc
Decoupled/hpc/: build_binaries.sh  hedgehog_array.sub
Decoupled/magnetization/: CMakeLists.txt  magnetization.cc  magnetization.h  magnetization_assemble.cc  magnetization_main.cc  magnetization_output.cc  magnetization_setup.cc  magnetization_solve.cc
Decoupled/mms_tests/: CMakeLists.txt  coupled_system_mms.h  coupled_system_mms_test.cc  poisson_mag_mms.h  poisson_mag_mms_test.cc  poisson_mag_ns_mms.h  poisson_mag_ns_mms_test.cc
Decoupled/navier_stokes/: CMakeLists.txt  navier_stokes.cc  navier_stokes.h  navier_stokes_assemble.cc  navier_stokes_main.cc  navier_stokes_output.cc  navier_stokes_setup.cc  navier_stokes_solve.cc
Decoupled/physics/: applied_field.h  kelvin_force.h  material_properties.h  skew_forms.h  solver_utils.h
Decoupled/poisson/: CMakeLists.txt  poisson.cc  poisson.h  poisson_assemble.cc  poisson_main.cc  poisson_output.cc  poisson_setup.cc  poisson_solve.cc
Decoupled/utilities/: amr.h  parameters.cc  parameters.h  solver_info.h  sparsity_export.h  timestamp.h
FHD/: CMakeLists.txt  extension.md
FHD/Report/: Diagnostics.md  Plan.md  Progress.md  Project.md
FHD/angular_momentum/: CMakeLists.txt  angular_momentum.cc  angular_momentum.h  angular_momentum_assemble.cc  angular_momentum_output.cc  angular_momentum_solve.cc
FHD/drivers/: fhd_driver.cc
FHD/magnetization/: magnetization.cc  magnetization.h  magnetization_assemble.cc  magnetization_output.cc  magnetization_setup.cc  magnetization_solve.cc
FHD/mms_tests/: full_coupled_mms.h  full_coupled_mms_test.cc  ns_angmom_mms.h  ns_angmom_mms_test.cc  poisson_mag_mms.h  poisson_mag_mms_test.cc
FHD/navier_stokes/: navier_stokes.cc  navier_stokes.h  navier_stokes_assemble.cc  navier_stokes_setup.cc  navier_stokes_solve.cc
FHD/passive_scalar/: CMakeLists.txt  passive_scalar_assemble.cc  passive_scalar_output.cc  passive_scalar_setup.cc  passive_scalar_solve.cc
FHD/physics/: kelvin_force.h  material_properties.h
FHD/poisson/: CMakeLists.txt  poisson.cc  poisson_solve.cc
FHD/utilities/: parameters.cc  parameters.h  solver_info.h
Parallel/: CMakeLists.txt  main.cc  mms_full_2033225.err  mms_full_2033225.out  mms_full_2033398.err  mms_full_2033398.out  mms_full_suite.sub  mms_full_suite_bkup.sub  rosensweig_r5_production.sub  rosensweig_r5_single_node.sub
Parallel/assembly/: ch_assembler.cc  magnetization_assembler.cc  magnetization_assembler.h  ns_assembler.cc  ns_assembler.h  poisson_assembler.cc  poisson_assembler.h
Parallel/build-release/: CMakeCache.txt
Parallel/core/: amr_postprocess.h  phase_field.cc  phase_field.h  phase_field_amr.cc  phase_field_setup.cc
Parallel/diagnostics/: ch_diagnostics.h  ferrofluid_diagnostics.h  force_diagnostics.h  magnetization_diagnostics.h  ns_diagnostics.h  step_data.h  system_diagnostics.h
Parallel/mms/: mms_context.cc  mms_context.h
Parallel/output/: console_logger.h  metrics_logger.h
Parallel/physics/: applied_field.h  initial_conditions.h  material_properties.h
Parallel/setup/: ch_setup.h  ns_setup.cc  poisson_setup.cc
Parallel/solvers/: ch_solver.cc  ch_solver.h  magnetization_solver.h  ns_block_preconditioner.cc  ns_block_preconditioner.h  ns_solver.cc  ns_solver.h  poisson_solver.h
Parallel/utilities/: mpi_tools.h  parameters.cc  parameters.h  run_tracker.h  tools.h
Parallel/validation/: cavity_benchmark.cc  validation.h
PhaseField/: CMakeLists.txt  main.cc
PhaseField/Central_Command/: dome_field_test.sub  dome_r4_amr.sub  dome_r4_sub  dome_r5.sub  hedge_r4.sub  hedge_r4_amr.sub  hedge_r5.sub  rosen_r5.sub  rosen_r5_amr.sub  setup_runs.sh
PhaseField/assembly/: ch_assembler.cc  ch_assembler.h  magnetization_assembler.cc  magnetization_assembler.h  ns_assembler.cc  ns_assembler.h  ns_mms_assembler.cc  ns_mms_assembler.h  poisson_assembler.cc  poisson_assembler.h
PhaseField/core/: phase_field.cc  phase_field.h  phase_field_amr.cc  phase_field_setup.cc
PhaseField/diagnostics/: ch_diagnostics.cc  ch_diagnostics.h  ch_mms.cc  ch_mms.h  diagnostics.cc  diagnostics.h  field_diagnostics.h  force_diagnostics.h  interface_tracking.h  magnetization_diagnostics.cc  ns_diagnostics.cc  ns_diagnostics.h  poisson_diagnostics.cc  poisson_diagnostics.h  skew_symmetry_test.h  spikes.cc  spikes.h  step_data.h  test_skew_forms_dg.cc  verification.cc  verification.h
PhaseField/mms/: ch_mms.cc  ch_mms.h  magnetization_mms.h  mms_runtime.cc  mms_runtime.h  mms_verification.cc  mms_verification.h  ns_mms.h  poisson_mms.cc  poisson_mms.h  test_mms.cc  test_steady_stokes_mms.cc
PhaseField/output/: logger.cc  logger.h  metrics_logger.h  vtk_output.cc  vtk_output.h  vtk_writer.cc  vtk_writer.h
PhaseField/physics/: applied_field.cc  applied_field.h  boundary_conditions.cc  boundary_conditions.h  initial_conditions.cc  initial_conditions.h  kelvin_force.h  material_properties.cc  material_properties.h  skew_forms.h
PhaseField/setup/: ch_setup.cc  ch_setup.h  magnetization_setup.cc  magnetization_setup.h  ns_setup.cc  ns_setup.h  poisson_setup.cc  poisson_setup.h
PhaseField/solvers/: ch_solver.cc  ch_solver.h  iterative_solver.h  magnetization_solver.cc  magnetization_solver.h  ns_block_preconditioner.cc  ns_block_preconditioner.h  (+6 more)
phase/: CMakeLists.txt  compile_commands.json  main.cc
(+1067 files in other folders)
